--- a/docker/apps/focalboard/docker-compose.yml
+++ b/docker/apps/focalboard/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - focal-net
 
   focalboard-db:
-    image: postgres:latest
+    image: postgres:14.5
     container_name: focalboard-db
     restart: unless-stopped
     volumes:
