--- a/docker/firezone/docker-compose.yml
+++ b/docker/firezone/docker-compose.yml
@@ -54,6 +54,8 @@ services:
       # /var/firezone/private_key exists when Firezone starts, it is
       # used as the WireGuard private. Otherwise, one is generated.
       - ${FZ_INSTALL_DIR:-.}/firezone:/var/firezone
+      - "/etc/localtime:/etc/localtime:ro"
+      - "/etc/timezone:/etc/timezone:ro"
     cap_add:
       # Needed for WireGuard and firewall support.
       - NET_ADMIN
@@ -78,6 +80,8 @@ services:
     container_name: postgres
     volumes:
       - postgres-data:/var/lib/postgresql/data
+      - "/etc/localtime:/etc/localtime:ro"
+      - "/etc/timezone:/etc/timezone:ro"
     environment:
       POSTGRES_DB: ${DATABASE_NAME}
       POSTGRES_USER: ${DATABASE_USER}
