--- a/docker/media-stream/qbittorrentvpn-compose.yml
+++ b/docker/media-stream/qbittorrentvpn-compose.yml
@@ -18,7 +18,7 @@ services:
       - PUID=1000
       - PGID=1000
       - LAN_NETWORK=192.168.20.0/24,172.27.0.0/24
-      - ENABLE_SSL=yes
+      - ENABLE_SSL=no
       - INSTALL_PYTHON3=yes
     networks:
       - qbit-network
