--- a/docker/media-stream/qbittorrentvpn-compose.yml
+++ b/docker/media-stream/qbittorrentvpn-compose.yml
@@ -4,13 +4,14 @@ services:
     image: dyonr/qbittorrentvpn
     container_name: qbittorrentvpn
     restart: unless-stopped
+    privileged: true
     cap_add:
       - NET_ADMIN
     sysctls:
       - net.ipv4.conf.all.src_valid_mark=1
     ports:
       - "8999:8999/udp"
-      - "7080:8080"
+      - "9080:8080"
     environment:
       - TZ=America/Montreal
       - VPN_ENABLED=yes
@@ -18,8 +19,9 @@ services:
       - PUID=1000
       - PGID=1000
       - LAN_NETWORK=192.168.20.0/24,172.27.0.0/24
+      - NAME_SERVERS=1.1.1.1,1.0.0.1
       - ENABLE_SSL=no
-      - INSTALL_PYTHON3=yes
+      - WEBUI_PORT_ENV=8080
     networks:
       - qbit-network
     volumes:
