--- a/docker/media-stream/qbittorrentvpn-compose.yml
+++ b/docker/media-stream/qbittorrentvpn-compose.yml
@@ -19,20 +19,17 @@ services:
       - PUID=1000
       - PGID=1000
       - LAN_NETWORK=192.168.20.0/24,172.27.0.0/24
-      - NAME_SERVERS=192.168.20.2,1.1.1.1,1.0.0.1
+      - NAME_SERVERS=9.9.9.9,149.112.112.112
       - ENABLE_SSL=no
       - WEBUI_PORT_ENV=8080
       - INSTALL_PYTHON3=yes
     networks:
-      - qbit-network
+      - media-net
     volumes:
       - /opt/data-docker/media_stream/qbittorrentvpn/config:/config
       - /nfs/stream_data:/downloads
 
 
 networks:
-  qbit-network:
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 172.27.0.0/24
+  media-net:
+    external: true
