--- a/docker/media-stream/qbittorrentvpn-compose.yml
+++ b/docker/media-stream/qbittorrentvpn-compose.yml
@@ -18,7 +18,7 @@ services:
       - VPN_TYPE=wireguard
       - PUID=1000
       - PGID=1000
-      - LAN_NETWORK=172.27.0.0/24
+      - LAN_NETWORK=192.168.20.0/24,172.27.0.0/24
       - NAME_SERVERS=9.9.9.9,149.112.112.112
       - ENABLE_SSL=yes
       - WEBUI_PORT_ENV=8080
