--- a/docker/media-stream/qbittorrentvpn-compose.yml
+++ b/docker/media-stream/qbittorrentvpn-compose.yml
@@ -20,7 +20,7 @@ services:
       - PGID=1000
       - LAN_NETWORK=192.168.20.0/24,172.27.0.0/24
       - NAME_SERVERS=9.9.9.9,149.112.112.112
-      - ENABLE_SSL=no
+      #- ENABLE_SSL=no
       - WEBUI_PORT_ENV=8080
       - INSTALL_PYTHON3=yes
     networks:
