--- a/docker/media-stream/docker-compose.yml
+++ b/docker/media-stream/docker-compose.yml
@@ -95,14 +95,13 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=America/Montreal
-      - JELLYFIN_PublishedServerUrl=media #optional
+      - JELLYFIN_PublishedServerUrl=192.168.20.45 #optional
     volumes:
       - /opt/data-docker/media_stream/jellyfin/config:/config
       - /nfs/stream_data/tvseries:/data/tvshows
       - /nfs/stream_data/movies:/data/movies
     ports:
       - "8096:8096"
-      - "8920:8920" #optional
       - "7359:7359/udp" #optional
       - "1900:1900/udp" #optional
     networks:
