--- a/docker/media-stream/docker-compose.yml
+++ b/docker/media-stream/docker-compose.yml
@@ -120,6 +120,22 @@ services:
       - "9696:9696"
     networks:
       - media-net
+  whisparr:
+    image: cr.hotio.dev/hotio/whisparr
+    container_name: whisparr
+    restart: unless-stopped
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - UMASK=0022
+      - TZ=America/Montreal
+    volumes:
+      - /opt/data-docker/media_stream/whisparr/config:/config
+      - /nfs/stream_data/xxx-adts:/xxx
+    ports:
+      - "6969:6969"
+    networks:
+      - media-net
 networks:
   media-net:
     external: true
