--- a/docker/media-stream/docker-compose.yml
+++ b/docker/media-stream/docker-compose.yml
@@ -132,6 +132,7 @@ services:
     volumes:
       - /opt/data-docker/media_stream/whisparr/config:/config
       - /nfs/stream_data/xxx-adts:/xxx
+      - /nfs/stream_data/downloads:/downloads #optional
     ports:
       - "6969:6969"
     networks:
