--- a/docker/media-stream/docker-compose.yml
+++ b/docker/media-stream/docker-compose.yml
@@ -100,6 +100,7 @@ services:
       - /opt/data-docker/media_stream/jellyfin/config:/config
       - /nfs/stream_data/tvseries:/data/tvshows
       - /nfs/stream_data/movies:/data/movies
+      - /nfs/stream_data/xxx-adts:/data/xxx
     ports:
       - "8096:8096"
       - "7359:7359/udp" #optional
