--- a/docker/media-stream/docker-compose.yml
+++ b/docker/media-stream/docker-compose.yml
@@ -107,13 +107,13 @@ services:
       - "1900:1900/udp" #optional
     networks:
       - media-net
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [ gpu ]
+    #deploy:
+      #resources:
+        #reservations:
+          #devices:
+            #- driver: nvidia
+              #count: 1
+              #capabilities: [ gpu ]
 
   prowlarr:
     image: lscr.io/linuxserver/prowlarr:develop
