--- a/docker/media-stream/docker-compose.yml
+++ b/docker/media-stream/docker-compose.yml
@@ -78,7 +78,7 @@ services:
     environment:
       - PUID=1000
       - PGID=1000
-      - TZ=Europe/London
+      - TZ=America/Montreal
     volumes:
       - /opt/data-docker/media_stream/lidarr/config:/config
       - /nfs/stream_data/music:/music #optional
