--- a/ansible/playbooks/reboot.yml
+++ b/ansible/playbooks/reboot.yml
@@ -1,4 +1,4 @@
-- hosts: "lcx-vms"
+- hosts: "*"
   become: true
   tasks:
     - name: Reboot a slow machine that might have lots of updates to apply
