--- a/ansible/playbooks/iftop.yml
+++ b/ansible/playbooks/iftop.yml
@@ -7,3 +7,9 @@
         state: present
         update_cache: true
       become: true
+    - name: install htop
+      apt:
+        name: htop
+        state: present
+        update_cache: true
+      become: true
