--- a/docker/apps/joplin-server/docker-compose.yml
+++ b/docker/apps/joplin-server/docker-compose.yml
@@ -1,41 +1,57 @@
-version: '3'
+version: "3.9"
+
+secrets:
+  POSTGRES_PWD:
+    file: /opt/data-etc/joplin/db_pwd.secret.txt
+  POSTGRES_USER:
+    file: /opt/data-etc/joplin/db_user.secret.txt
+  POSTGRES_DB:
+    file: /opt/data-etc/joplin/db_name.secret.txt
 
 services:
-  joplindb:
-    image: postgres:15
+  joplin_db:
+    image: postgres:15.2
+    container_name: joplin_db
     volumes:
-      - /opt/data-docker/volumes/joplindb/postgresql:/var/lib/postgresql/data
-    ports:
-      - ":5432"
+      - /opt/data-docker/volumes/joplin/postgresql:/var/lib/postgresql/data
     restart: unless-stopped
     environment:
-      - POSTGRES_PASSWORD=${PG_PASSWORD}
-      - POSTGRES_USER=${PG_USER}
-      - POSTGRES_DB=${PG_DBNAME}
-  app:
+      - POSTGRES_PASSWORD_FILE=${POSTGRES_PWD}
+      - POSTGRES_USER_FILE=${POSTGRES_USER}
+      - POSTGRES_DB_FILE=${POSTGRES_DB}
+      - TZ=${TIME_ZONE}
+    secrets:
+      - POSTGRES_PWD
+      - POSTGRES_USER
+      - POSTGRES_DB
+
+  joplin:
     image: joplin/server:latest
+    container_name: joplin
+    env_file:
+      - /opt/data-etc/joplin/config.env
     depends_on:
-      - joplindb
+      - joplin_db
     ports:
-      - ":22300"
+      - "7806:22300"
     restart: unless-stopped
     environment:
       - APP_PORT=${PORT}
-      - APP_BASE_URL=https://websiteurl.com
+      - APP_BASE_URL=${APP_BASE_URL}
       - DB_CLIENT=pg
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DATABASE=joplin
-      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=${PG_PWD}
+      - POSTGRES_DATABASE=${PG_DBNAME}
+      - POSTGRES_USER=${PG_USER}
       - POSTGRES_PORT=5432
-      - POSTGRES_HOST=db
+      - POSTGRES_HOST=joplin_db
       - MAILER_ENABLED=1
-      - MAILER_HOST=smtp.mailgun.org
-      - MAILER_PORT=465
-      - MAILER_SECURE=1
-      - MAILER_AUTH_USER=youremail@gmail.com
-      - MAILER_AUTH_PASSWORD=Y0urP@ssw0rd
+      - MAILER_HOST=${MAIL_HOST}
+      - MAILER_PORT=${MAIL_PORT}
+      - MAILER_SECURE=${ENABLE_SSL}
+      - MAILER_AUTH_USER=${USER_MAIL}
+      - MAILER_AUTH_PASSWORD=${PASSWORD_MAIL}
       - MAILER_NOREPLY_NAME=Joplin
-      - MAILER_NOREPLY_EMAIL=email@email.com
+      - MAILER_NOREPLY_EMAIL=${MAIL_FROM}
 
 volumes:
   joplindb:
