--- a/docker/apps/joplin-server/docker-compose.yml
+++ b/docker/apps/joplin-server/docker-compose.yml
@@ -47,8 +47,10 @@ services:
       - MAILER_ENABLED=1
       - MAILER_HOST=${MAIL_HOST}
       - MAILER_PORT=${MAIL_PORT}
-      #- MAILER_SECURE=${MAIL_ENABLE_SSL}
+      - MAILER_SECURE=${MAIL_ENABLE_SSL}
       - MAILER_AUTH_USER=${USER_MAIL}
       - MAILER_AUTH_PASSWORD=${PASSWORD_MAIL}
       - MAILER_NOREPLY_NAME=Joplin
       - MAILER_NOREPLY_EMAIL=${MAIL_FROM}
+      - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
+      - STRIPE_WEBHOOK_SECRET=${STRIPE_WEBHOOK_SECRET}
