--- a/docker/apps/firefly/docker-compose.yml
+++ b/docker/apps/firefly/docker-compose.yml
@@ -128,6 +128,9 @@ services:
       - '7808:8080'
     depends_on:
       - firefly
+    environment:
+      FIREFLY_III_URL: http://firefly:8080
+      FIREFLY_III_ACCESS_TOKEN: "test"
 
   adminer:
     image: adminer:latest
