--- a/docker/media-stream/docker-compose.yml
+++ b/docker/media-stream/docker-compose.yml
@@ -87,26 +87,26 @@ services:
       - "8686:8686"
     networks:
       - media-net
-  jellyfin:
-    image: lscr.io/linuxserver/jellyfin:latest
-    container_name: jellyfin
-    restart: unless-stopped
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=America/Montreal
-      - JELLYFIN_PublishedServerUrl=192.168.20.45 #optional
-    volumes:
-      - /opt/data-docker/media_stream/jellyfin/config:/config
-      - /nfs/stream_data/tvseries:/data/tvshows
-      - /nfs/stream_data/movies:/data/movies
-      - /nfs/stream_data/xxx-adts:/data/xxx
-    ports:
-      - "8096:8096"
-      - "7359:7359/udp" #optional
-      - "1900:1900/udp" #optional
-    networks:
-      - media-net
+  #jellyfin:
+    #image: lscr.io/linuxserver/jellyfin:latest
+    #container_name: jellyfin
+    #restart: unless-stopped
+    #environment:
+    #  - PUID=1000
+    #  - PGID=1000
+    #  - TZ=America/Montreal
+    #  - JELLYFIN_PublishedServerUrl=192.168.20.45 #optional
+    #volumes:
+    #  - /opt/data-docker/media_stream/jellyfin/config:/config
+    #  - /nfs/stream_data/tvseries:/data/tvshows
+    #  - /nfs/stream_data/movies:/data/movies
+    #  - /nfs/stream_data/xxx-adts:/data/xxx
+    #ports:
+    #  - "8096:8096"
+    #  - "7359:7359/udp" #optional
+    #  - "1900:1900/udp" #optional
+    #networks:
+    #  - media-net
     #deploy:
       #resources:
         #reservations:
