--- a/docker/media-stream/torrserver-docker-compose.yml
+++ b/docker/media-stream/torrserver-docker-compose.yml
@@ -19,6 +19,7 @@ services:
     volumes:
       - /opt/data-docker/media_stream/torrserver-plus/config:/TS/db
       - /nfs/stream_data/downloads:/TS/db/torrents
+      - /nfs/stream_data/downloads:/downloads
     ports:
       - "9666:8090"
       - "8666:8666"
