--- a/docker/media-stream/docker-compose.yml
+++ b/docker/media-stream/docker-compose.yml
@@ -14,7 +14,6 @@ services:
     volumes:
       - /opt/data-docker/media_stream/jackett/config:/config
       - /nfs/stream_data/downloads:/downloads
-      - /nfs/stream_data/downloads:/TS/db/torrents
     ports:
       - "9117:9117"
     networks:
@@ -32,7 +31,6 @@ services:
       - /opt/data-docker/media_stream/radarr/config:/config
       - /nfs/stream_data/movies:/movies
       - /nfs/stream_data/downloads:/downloads
-      - /nfs/stream_data/downloads:/TS/db/torrents
     ports:
       - "7878:7878"
     networks:
@@ -50,7 +48,6 @@ services:
       - /opt/data-docker/media_stream/sonarr/config:/config
       - /nfs/stream_data/tvseries:/tv #optional
       - /nfs/stream_data/downloads:/downloads #optional
-      - /nfs/stream_data/downloads:/TS/db/torrents
     ports:
       - "8989:8989"
     networks:
@@ -69,7 +66,6 @@ services:
       - /opt/data-docker/media_stream/bazarr/config:/config
       - /nfs/stream_data/movies:/movies #optional
       - /nfs/stream_data/tvseries:/tv #optional
-      - /nfs/stream_data/downloads:/TS/db/torrents
     ports:
       - "6767:6767"
     networks:
@@ -87,7 +83,6 @@ services:
       - /opt/data-docker/media_stream/lidarr/config:/config
       - /nfs/stream_data/music:/music #optional
       - /nfs/stream_data/downloads:/downloads #optional
-      - /nfs/stream_data/downloads:/TS/db/torrents
     ports:
       - "8686:8686"
     networks:
@@ -147,7 +142,6 @@ services:
       - /opt/data-docker/media_stream/whisparr/config:/config
       - /nfs/stream_data/xxx-adts:/xxx
       - /nfs/stream_data/downloads:/downloads #optional
-      - /nfs/stream_data/downloads:/TS/db/torrents
     ports:
       - "6969:6969"
     networks:
@@ -165,11 +159,42 @@ services:
       - /opt/data-docker/media_stream/readarr/config:/config
       - /nfs/stream_data/books:/books
       - /nfs/stream_data/downloads:/downloads #optional
-      - /nfs/stream_data/downloads:/TS/db/torrents
     ports:
       - "8787:8787"
     networks:
       - media-net
+  torrserver:
+    image: ghcr.io/yourok/torrserver:latest
+    container_name: torrserver
+    restart: unless-stopped
+    ports:
+      - "8890:8090"
+    networks:
+      - media-net
+    environment:
+      - TZ=America/Montreal
+      - PUID=1000
+      - PGID=1000
+    volumes:
+      - /nfs/stream_data/downloads/torrents:/opt/ts/torrents
+      - /opt/data-docker/media_stream/torrserver/config:/opt/ts/config
+      - /opt/data-docker/media_stream/torrserver/log:/opt/ts/log
+
+  qbittorrent:
+    container_name: qbittorrent
+    image: cr.hotio.dev/hotio/qbittorrent
+    ports:
+      - "8080:8080"
+    networks:
+      - media-net
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - UMASK=022
+      - TZ=America/Montreal
+    volumes:
+      - /opt/data-docker/media_stream/qbittorrent/config:/config
+      - /nfs/stream_data/downloads:/downloads #optional
 networks:
   media-net:
     external: true
