--- a/docker/media-stream/navidrome-docker-compose.yml
+++ b/docker/media-stream/navidrome-docker-compose.yml
@@ -9,6 +9,7 @@ services:
     networks:
       - media-net
     environment:
+      TZ: America/Montreal
       # Optional: put your config options customization here. Examples:
       ND_SCANSCHEDULE: 1h
       ND_LOGLEVEL: info
