--- a/docker/media-stream/navidrome-docker-compose.yml
+++ b/docker/media-stream/navidrome-docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.9"
 services:
   navidrome:
     image: deluan/navidrome:latest
+    container_name: navidrome
     user: 1000:1000 # should be owner of volumes
     ports:
       - "8533:4533"
