--- a/docker/media-stream/qbittorrentvpnhotio-compose.yml
+++ b/docker/media-stream/qbittorrentvpnhotio-compose.yml
@@ -15,13 +15,12 @@ services:
       - VPN_ENABLED=true
       - VPN_LAN_NETWORK=172.27.0.0/24
       - VPN_CONF=wg0
-      - VPN_ADDITIONAL_PORTS
+      #- VPN_ADDITIONAL_PORTS
       - PRIVOXY_ENABLED=false
     networks:
       - media-net
     volumes:
       - /opt/data-docker/media_stream/qbittorrentvpnhotio/config:/config
-      - /opt/data-docker/media_stream/wireguard/wg0.conf:/config/wireguard/wg0.conf
       - /nfs/stream_data/downloads:/downloads #optional
     cap_add:
       - NET_ADMIN
