--- a/docker/media-stream/gluetun-docker-compose.yml
+++ b/docker/media-stream/gluetun-docker-compose.yml
@@ -11,6 +11,22 @@ services:
       - TZ=America/Montreal
     network_mode: "service:gluetun"
 
+  qbittorrent:
+    container_name: qbittorrent
+    image: cr.hotio.dev/hotio/qbittorrent
+    restart: unless-stopped
+    networks:
+      - media-net
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - UMASK=022
+      - TZ=America/Montreal
+    network_mode: "service:gluetun"
+    volumes:
+      - /opt/data-docker/media_stream/qbittorrent/config:/config
+      - /nfs/stream_data/downloads:/downloads #optional
+
   gluetun:
     image: "qmcgaw/gluetun"
     container_name: gluetun
@@ -21,6 +37,7 @@ services:
       - "8888:8888/tcp" #proxy
       - "8000:8000/tcp"
       - "8488:1080" #socks5 proxy
+      - "8280:8080" #qbittorrents
     env_file: /opt/data-etc/media_stream/.gluetun.env
     environment:
       - TZ=America/Montreal
