--- a/docker/pihole/docker-compose.yml
+++ b/docker/pihole/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - '/opt/data-docker/pihole/etc/pihole:/etc/pihole'
       - '/opt/data-docker/pihole/etc/dnsmasq.d:/etc/dnsmasq.d'
       - '/opt/data-docker/pihole/etc/resolv.conf:/etc/resolv.conf'
+      - '/opt/data-docker/pihole/var/pihole.log:/var/log/pihole/pihole.log'
     restart: unless-stopped
     networks:
       pihole_local_network:
