--- a/docker/apps/docuseal/docker-compose.yml
+++ b/docker/apps/docuseal/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3'
 
 services:
-  app:
+  docuseal:
+    container_name: docuseal
     depends_on:
       postgres:
         condition: service_healthy
@@ -21,9 +22,11 @@ services:
       - SMTP_DOMAIN=smtp.gmail.com
       - SMTP_PASSWORD=${SMTP_PASSWORD}
       - SMTP_AUTHENTICATION=login
+      - SMTP_FROM=${SMTP_USERNAME}
 
   postgres:
     image: postgres:15
+    container_name: postgres
     volumes:
       - '/opt/data-docker/postgres-docuseal:/var/lib/postgresql/data'
     environment:
