--- a/docker/media-stream/navidrome-docker-compose.yml
+++ b/docker/media-stream/navidrome-docker-compose.yml
@@ -18,7 +18,7 @@ services:
       ND_BASEURL: ""
     volumes:
       - "/opt/data-docker/media_stream/navidrome:/data"
-      - "/nfs/stream_data/music:/music:ro"
+      - "/nfs/stream_data/audios:/music:ro"
 
 networks:
   media-net:
