--- a/docker/media-stream/gluetun-docker-compose.yml
+++ b/docker/media-stream/gluetun-docker-compose.yml
@@ -5,6 +5,8 @@ services:
     image: serjs/go-socks5-proxy
     container_name: serjs-socks5
     restart: unless-stopped
+    labels:
+      - "com.centurylinklabs.watchtower.scope=toUpdateScope"
     depends_on:
       - gluetun
     environment:
@@ -15,6 +17,8 @@ services:
     container_name: qbittorrent
     image: cr.hotio.dev/hotio/qbittorrent
     restart: unless-stopped
+    labels:
+      - "com.centurylinklabs.watchtower.scope=toUpdateScope"
     environment:
       - PUID=1000
       - PGID=1000
@@ -25,6 +29,23 @@ services:
       - /opt/data-docker/media_stream/qbittorrent/config:/config
       - /nfs/stream_data/downloads:/downloads #optional
 
+  torrserver:
+    image: ghcr.io/yourok/torrserver:latest
+    container_name: torrserver
+    restart: unless-stopped
+    labels:
+      - "com.centurylinklabs.watchtower.scope=toUpdateScope"
+    network_mode: "service:gluetun"
+    environment:
+      - TZ=America/Montreal
+      - PUID=1000
+      - PGID=1000
+      - UMASK=022
+    volumes:
+      - /nfs/stream_data/downloads/torrtorrents:/opt/ts/torrents
+      - /opt/data-docker/media_stream/torrserver/config:/opt/ts/config
+      - /opt/data-docker/media_stream/torrserver/log:/opt/ts/log
+
   gluetun:
     image: "qmcgaw/gluetun"
     container_name: gluetun
@@ -34,6 +55,7 @@ services:
     ports:
       - "8888:8888/tcp" #proxy
       - "8000:8000/tcp"
+      - "8890:8090" #torrserver
       - "8488:1080" #socks5 proxy
       - "8280:8080" #qbittorrents
     env_file: /opt/data-etc/media_stream/.gluetun.env
