--- a/docker/media-stream/docker-compose.yml
+++ b/docker/media-stream/docker-compose.yml
@@ -34,7 +34,7 @@ services:
     volumes:
       - /opt/data-docker/media_stream/radarr/config:/config
       - /nfs/stream_data/videos/movies:/movies
-      - /nfs/stream_data/downloads:/downloads
+      - /nfs/stream_data/downloads:/data/downloads
     ports:
       - "7878:7878"
     networks:
@@ -53,7 +53,7 @@ services:
     volumes:
       - /opt/data-docker/media_stream/sonarr/config:/config
       - /nfs/stream_data/videos/tvshows:/tv #optional
-      - /nfs/stream_data/downloads:/downloads #optional
+      - /nfs/stream_data/downloads:/data/downloads #optional
     ports:
       - "8989:8989"
     networks:
@@ -92,7 +92,7 @@ services:
     volumes:
       - /opt/data-docker/media_stream/lidarr/config:/config
       - /nfs/stream_data/audios/music:/music #optional
-      - /nfs/stream_data/downloads:/downloads #optional
+      - /nfs/stream_data/downloads:/data/downloads #optional
     ports:
       - "8686:8686"
     networks:
@@ -128,7 +128,7 @@ services:
     volumes:
       - /opt/data-docker/media_stream/whisparr/config:/config
       - /nfs/stream_data/videos/xxx-adts:/xxx
-      - /nfs/stream_data/downloads:/downloads #optional
+      - /nfs/stream_data/downloads:/data/downloads #optional
     ports:
       - "6969:6969"
     networks:
@@ -147,7 +147,7 @@ services:
     volumes:
       - /opt/data-docker/media_stream/readarr/config:/config
       - /nfs/stream_data/books:/books
-      - /nfs/stream_data/downloads:/downloads #optional
+      - /nfs/stream_data/downloads:/data/downloads #optional
     ports:
       - "8787:8787"
     networks:
