--- a/docker/media-stream/docker-compose.yml
+++ b/docker/media-stream/docker-compose.yml
@@ -52,7 +52,7 @@ services:
       - TZ=America/Montreal
     volumes:
       - /opt/data-docker/media_stream/sonarr/config:/config
-      - /nfs/stream_data/videos/tvshows:/data/tv #optional
+      - /nfs/stream_data/videos/tvshows:/data/medialibrary/tv #optional
       - /nfs/stream_data/downloads:/data/downloads #optional
     ports:
       - "8989:8989"
@@ -72,8 +72,8 @@ services:
       - TZ=America/Montreal
     volumes:
       - /opt/data-docker/media_stream/bazarr/config:/config
-      - /nfs/stream_data/videos/movies:/data/movies #optional
-      - /nfs/stream_data/videos/tvshows:/data/tv #optional
+      - /nfs/stream_data/videos/movies:/data/medialibrary/movies #optional
+      - /nfs/stream_data/videos/tvshows:/data/medialibrary/tv #optional
     ports:
       - "6767:6767"
     networks:
@@ -91,7 +91,7 @@ services:
       - TZ=America/Montreal
     volumes:
       - /opt/data-docker/media_stream/lidarr/config:/config
-      - /nfs/stream_data/audios/music:/data/music #optional
+      - /nfs/stream_data/audios/music:/data/medialibrary/music #optional
       - /nfs/stream_data/downloads:/data/downloads #optional
     ports:
       - "8686:8686"
@@ -127,7 +127,7 @@ services:
       - TZ=America/Montreal
     volumes:
       - /opt/data-docker/media_stream/whisparr/config:/config
-      - /nfs/stream_data/videos/xxx-adts:/data/xxx
+      - /nfs/stream_data/videos/xxx-adts:/data/medialibrary/xxx
       - /nfs/stream_data/downloads:/data/downloads #optional
     ports:
       - "6969:6969"
@@ -146,7 +146,7 @@ services:
       - TZ=America/Montreal
     volumes:
       - /opt/data-docker/media_stream/readarr/config:/config
-      - /nfs/stream_data/books:/data/books
+      - /nfs/stream_data/books:/data/medialibrary/books
       - /nfs/stream_data/downloads:/data/downloads #optional
     ports:
       - "8787:8787"
