--- a/docker/media-stream/navidrome-docker-compose.yml
+++ b/docker/media-stream/navidrome-docker-compose.yml
@@ -7,18 +7,20 @@ services:
     ports:
       - "8533:4533"
     restart: unless-stopped
+    labels:
+      - "com.centurylinklabs.watchtower.scope=toUpdateScope"
     networks:
       - media-net
     environment:
       TZ: America/Montreal
       # Optional: put your config options customization here. Examples:
-      ND_SCANSCHEDULE: 1h
+      ND_SCANSCHEDULE: 5h
       ND_LOGLEVEL: info
       ND_SESSIONTIMEOUT: 24h
       ND_BASEURL: ""
     volumes:
       - "/opt/data-docker/media_stream/navidrome:/data"
-      - "/nfs/stream_data/audios:/music:ro"
+      - "/nfs/stream_data/audios/music:/data/medialibrary/music:ro" #optional
 
 networks:
   media-net:
