--- a/docker/media-stream/navidrome-docker-compose.yml
+++ b/docker/media-stream/navidrome-docker-compose.yml
@@ -20,7 +20,7 @@ services:
       ND_BASEURL: ""
     volumes:
       - "/opt/data-docker/media_stream/navidrome:/data"
-      - "/nfs/stream_data/audios:/data/medialibrary/music:ro" #optional
+      - "/nfs/stream_data/audios:/music:ro" #optional
 
 networks:
   media-net:
