--- a/docker/pihole/docker-compose.yml
+++ b/docker/pihole/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - TZ=America/Montreal # change this to your timezone
       - WEBPASSWORD_FILE=/run/secrets/WEB_PASSWORD_SECRET
       #- DNSSEC=true
+      - DNS_BOGUS_PRIV=true
       - PIHOLE_DNS_=172.20.0.3
       - VIRTUAL_HOST=${HOSTNAME}
     volumes:
