--- a/docker/media-stream/gluetun-docker-compose.yml
+++ b/docker/media-stream/gluetun-docker-compose.yml
@@ -50,6 +50,8 @@ services:
     image: "qmcgaw/gluetun"
     container_name: gluetun
     restart: unless-stopped
+    labels:
+      - "com.centurylinklabs.watchtower.scope=toUpdateScope"
     cap_add:
       - NET_ADMIN
     ports:
