--- a/docker/media-stream/webdav-docker-compose.yml
+++ b/docker/media-stream/webdav-docker-compose.yml
@@ -7,6 +7,6 @@ services:
     ports:
       - "8101:80"
     volumes:
-      - "/opt/data-docker/media_stream/webdav/data:/var/lib/dav"
-      - "/nfs/stream_data/music:/var/lib/dav/music"
+      #- "/opt/data-docker/media_stream/webdav/data:/var/lib/dav"
+      - "/nfs/stream_data/music:/var/lib/dav"
       - "/opt/data-docker/media_stream/webdav/etc/user.passwd:/user.passwd:ro"
