--- a/docker/media-stream/webdav-docker-compose.yml
+++ b/docker/media-stream/webdav-docker-compose.yml
@@ -9,4 +9,4 @@ services:
     volumes:
       #- "/opt/data-docker/media_stream/webdav/data:/var/lib/dav"
       - "/nfs/stream_data/music:/var/lib/dav"
-      - "/opt/data-docker/media_stream/webdav/etc/user.passwd:/user.passwd:ro"
+      #- "/opt/data-docker/media_stream/webdav/etc/user.passwd:/user.passwd:ro"
