--- a/docker/media-stream/webdav-docker-compose.yml
+++ b/docker/media-stream/webdav-docker-compose.yml
@@ -6,6 +6,10 @@ services:
     restart: unless-stopped
     ports:
       - "8101:80"
+    environment:
+      - AUTH_TYPE=Basic
+      - USERNAME=test
+      - PASSWORD=test
     volumes:
       #- "/opt/data-docker/media_stream/webdav/data:/var/lib/dav"
       - "/nfs/stream_data/music:/var/lib/dav"
