--- a/docker/media-stream/webdav-docker-compose.yml
+++ b/docker/media-stream/webdav-docker-compose.yml
@@ -12,6 +12,6 @@ services:
       - NGINX_CLIENT_MAX_BODY_SIZE=500M
     volumes:
       - "/opt/data-docker/media_stream/webdav/lib:/var/www/webdav"
-      - "/nfs/stream_data/music:/var/www/webdav/music:ro"
+      - "/nfs/stream_data/audios:/var/www/webdav/music:ro"
       #- "/nfs/stream_data/music:/var/lib/dav"
       #- "/opt/data-docker/media_stream/webdav/etc/user.passwd:/user.passwd:ro"
