--- a/docker/pihole/docker-compose.yml
+++ b/docker/pihole/docker-compose.yml
@@ -43,6 +43,8 @@ services:
         ipv4_address: 172.20.0.3 #this will be your upstream DNS server in Pi-Hole
 
   orbital-sync:
+    env_file:
+      - /opt/data-docker-etc/pihole/orbital-sync.env
     image: mattwebbio/orbital-sync:latest
     container_name: orbital-sync
     labels:
